--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+# Hibernate dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.open-in-view=true
+spring.mvc.validation=true
+# Enable Spring Boot validation error handling
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
