--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.mvc.validation=true
 # Enable Spring Boot validation error handling
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+# Limit to 10 requests per minute
+spring.security.filter.rate-limit.requests=10
+spring.security.filter.rate-limit.duration=1m
+spring.security.filter.rate-limit.include-path-patterns=/api/**
